# rust-nes

./: .gitignore  Cargo.toml  index.html  nestest.log.txt
output/: draw.js  index.html  index.js  rust_nes.js  rust_nes_bg.wasm
src/: CONST.rs  bus.rs  consts.rs  cpu.rs  frame.rs  lib.rs  main.rs  main1.rs  memory.rs  ppu.rs  register.rs
src/PPU/: address.rs  ppu.rs
src/ROM/: mapper0.rs  mod.rs
src/backup/: main.rs  main2.rs  style.css
src/ppu_impl/: address.rs  control.rs  mod.rs  ppu.rs
test-snake/: Cargo.toml  foo.js
test-snake/output/: draw.js  foo.js  index.html  index.js  test.js  test_bg.wasm
test-snake/src/: lib.rs
tests/: main.rs  test_cpu.rs  test_frame.rs  test_snake.rs
