[package]
name = "rust-nes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
web-sys = { version = "0.3", features = ["Touch", "TouchList"] }
gloo-utils = "0.1.2"
gloo = "0.8.0"
env_logger = "0.9.1"
log = "0.4.17"

# [profile.release]
# opt-level = 's'
[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true