[package]
name = "rust-nes"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
bitflags = "1.2.1"
serde = { version = "1.0.147", features = ["derive"] }
serde-big-array = "0.4.1"
serde_json = "1.0.87"
gloo = "0.8.0"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1.7"
rand = { version = "0.7.3", features = ["wasm-bindgen"] }
# lazy_static = "1.4.0"

[dev-dependencies]

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "HtmlCanvasElement",
  "CanvasRenderingContext2d",
  "console",
  "Window",
  "KeyboardEvent",
  "EventTarget",
]

# [profile.release]
# opt-level = 's'
[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link time optimization using using whole-program analysis
lto = true

[features]
cpu-debug = []
wasm-debug = []
